[gd_scene load_steps=7 format=3 uid="uid://clw1wdmq035o1"]

[ext_resource type="Script" path="res://UI/MainMenu/MainMenu.gd" id="1_80qig"]
[ext_resource type="Texture2D" uid="uid://ceyd08sfcpj5u" path="res://UI/Art/Background.png" id="2_3vega"]
[ext_resource type="FontFile" uid="uid://dgcf0b68l8ks6" path="res://Assets/Fonts/RoTwimchRegular-WyR3n.ttf" id="2_7nqxn"]
[ext_resource type="Texture2D" uid="uid://dr4n2sed5g3qy" path="res://UI/Art/Button.png" id="3_s2oy3"]
[ext_resource type="Texture2D" uid="uid://dpe34srujhj4f" path="res://UI/Art/Us.png" id="5_srptp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ff1c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80qig")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1277.0
offset_bottom = 717.0
texture = ExtResource("2_3vega")

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 0
offset_left = 853.0
offset_top = 215.0
offset_right = 949.0
offset_bottom = 423.0
scale = Vector2(2.5, 2.5)

[node name="Play" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("3_s2oy3")

[node name="Label" type="Label" parent="Buttons/VBoxContainer/Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -10.5
offset_right = 22.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_7nqxn")
theme_override_font_sizes/font_size = 20
text = "PLAY"

[node name="Quit" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("3_s2oy3")

[node name="Label" type="Label" parent="Buttons/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -10.5
offset_right = 22.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_7nqxn")
theme_override_font_sizes/font_size = 20
text = "QUIT"

[node name="HSeparator" type="HSeparator" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 70
theme_override_styles/separator = SubResource("StyleBoxEmpty_7ff1c")

[node name="Credits" type="TextureButton" parent="Buttons/VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("3_s2oy3")

[node name="Label" type="Label" parent="Buttons/VBoxContainer/Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -10.5
offset_right = 22.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_7nqxn")
theme_override_font_sizes/font_size = 20
text = "Credits"

[node name="Credits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="Credits"]
layout_mode = 0
offset_left = 747.0
offset_top = 242.0
offset_right = 971.0
offset_bottom = 306.0
scale = Vector2(2, 2)
texture = ExtResource("5_srptp")

[node name="Label" type="Label" parent="Credits/TextureRect2"]
layout_mode = 0
offset_left = 2.5
offset_top = 64.5
offset_right = 61.5
offset_bottom = 87.5
theme_override_fonts/font = ExtResource("2_7nqxn")
text = "NATHAN"

[node name="Label2" type="Label" parent="Credits/TextureRect2"]
layout_mode = 0
offset_left = 91.5
offset_top = 65.0
offset_right = 150.5
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("2_7nqxn")
text = "hugo"

[node name="Label3" type="Label" parent="Credits/TextureRect2"]
layout_mode = 0
offset_left = 162.5
offset_top = 64.5
offset_right = 222.5
offset_bottom = 87.5
theme_override_fonts/font = ExtResource("2_7nqxn")
text = "FIROKAT"

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 753.0
offset_top = 436.0
offset_right = 1073.0
offset_bottom = 516.0
theme_override_fonts/normal_font = ExtResource("2_7nqxn")
theme_override_font_sizes/normal_font_size = 20
text = "Music: alexander-nakarada
Font : Twitchy.tv
Particle effects: BDragon1727"
fit_content = true
scroll_active = false

[node name="Back" type="TextureButton" parent="Credits"]
layout_mode = 2
offset_left = 1017.0
offset_top = 617.0
offset_right = 1113.0
offset_bottom = 649.0
scale = Vector2(2.5, 2.5)
focus_mode = 0
texture_normal = ExtResource("3_s2oy3")

[node name="Label" type="Label" parent="Credits/Back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -10.5
offset_right = 22.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_7nqxn")
theme_override_font_sizes/font_size = 20
text = "Back"

[connection signal="pressed" from="Buttons/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_back_pressed"]
